# rust-synapse-compress-state

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yaml  pypi.yaml  tests.yaml  triage_incoming.yml
auto_compressor/: Cargo.toml
auto_compressor/src/: lib.rs  main.rs  manager.rs  state_saving.rs
auto_compressor/tests/: state_saving_tests.rs
auto_compressor/tests/common/: mod.rs
compressor_integration_tests/: Cargo.toml  database_setup.sh  docker-compose.yaml
compressor_integration_tests/src/: lib.rs  map_builder.rs
compressor_integration_tests/tests/: auto_compressor_manager_tests.rs  auto_compressor_state_saving_tests.rs  compressor_config_tests.rs  compressor_continue_run_tests.rs
compressor_integration_tests/tests/tmp/: README.md
docs/: algorithm.md  node.md  python.md
src/: compressor.rs  database.rs  graphing.rs  lib.rs  main.rs
src/compressor/: compressor_tests.rs  level_tests.rs  stats_tests.rs
synapse_auto_compressor/: .gitignore  Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
synapse_auto_compressor/src/: lib.rs  main.rs  manager.rs  node.rs  state_saving.rs
tests/: config_tests.rs  database_setup.sh  saving_tests.rs
tests/common/: mod.rs
