[workspace]
members = ["synapse_auto_compressor", "compressor_integration_tests"]

[package]
authors = ["Erik Johnston"]
description = "A tool to compress some state in a Synapse instance's database"
name = "synapse_compress_state"
version = "0.1.0"
edition = "2018"

[[bin]]
name = "synapse_compress_state"
required-features = ["clap"]

[dependencies]
indicatif = "0.17.6"
openssl = "0.10.70"
postgres = "0.19.7"
postgres-openssl = "0.5.0"
rand = "0.8.5"
rayon = "1.7.0"
string_cache = "0.8.7"
env_logger = "0.11.2"
log = "0.4.20"
log-panics = "2.1.0"

[dependencies.state-map]
git = "https://github.com/matrix-org/rust-matrix-state-map"
rev = "211343e"

# Needed for pyo3 support
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies.clap]
version = "4.4.2"
features = ["cargo"]
optional = true

[dependencies.pyo3]
version = "0.22.4"
features = ["extension-module"]
optional = true

[dependencies.pyo3-log]
version = "0.11.0"
optional = true

[dependencies.tikv-jemallocator]
version = "0.6.0"
optional = true

[features]
default = ["clap", "jemalloc"]
jemalloc = ["tikv-jemallocator"]
no-progress-bars = []
pyo3 = ["dep:pyo3", "dep:pyo3-log"]
