[workspace]
members = [
    "synapse_auto_compressor",
    "compressor_integration_tests",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.2", features = ["cargo"] }
env_logger = "0.11.2"
indicatif = "0.17.6"
log = "0.4.20"
log-panics = "2.1.0"
openssl = "0.10.72"
postgres = "0.19.7"
postgres-openssl = "0.5.0"
pyo3 = { version = "0.22.4", features = ["extension-module"] }
pyo3-log = "0.11.0"
rand = "0.8.5"
rayon = "1.7.0"
serial_test = "2.0.0"
state-map = { git = "https://github.com/matrix-org/rust-matrix-state-map", rev = "211343e" }
string_cache = "0.8.7"
tikv-jemallocator = "0.6.0"

[package]
name = "synapse_compress_state"
description = "A tool to compress some state in a Synapse instance's database"
authors = ["Erik Johnston"]
version.workspace = true
edition.workspace = true

[[bin]]
name = "synapse_compress_state"
required-features = ["clap"]

[dependencies]
clap = { workspace = true, optional = true }
env_logger.workspace = true
indicatif.workspace = true
log-panics.workspace = true
log.workspace = true
openssl.workspace = true
postgres-openssl.workspace = true
postgres.workspace = true
pyo3 = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }
rand.workspace = true
rayon.workspace = true
state-map.workspace = true
string_cache.workspace = true
tikv-jemallocator = { workspace = true, optional = true }

# Needed for pyo3 support
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["clap", "jemalloc"]
jemalloc = ["tikv-jemallocator"]
no-progress-bars = []
pyo3 = ["dep:pyo3", "dep:pyo3-log"]
