[package]
name = "compressor_integration_tests"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
string_cache = "0.8.0"
serial_test = "0.5.1"
openssl = "0.10.32"
postgres = "0.19.0"
postgres-openssl = "0.5.0"
rand = "0.8.0"
synapse_compress_state = { path = "../" }

[dependencies.state-map]
git = "https://github.com/matrix-org/rust-matrix-state-map"