[package]
name = "compressor_integration_tests"
authors = ["Azrenbeth"]
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger.workspace = true
log.workspace = true
openssl.workspace = true
postgres-openssl.workspace = true
postgres.workspace = true
rand.workspace = true
serial_test.workspace = true
state-map.workspace = true
string_cache.workspace = true

[dependencies.synapse_auto_compressor]
path = "../synapse_auto_compressor/"

[dependencies.synapse_compress_state]
path = "../"
features = ["no-progress-bars"]
