[package]
name = "synapse_auto_compressor"
authors = ["William Ashton"]
version.workspace = true
edition.workspace = true

[[bin]]
name = "synapse_auto_compressor"
required-features = ["clap"]

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
env_logger.workspace = true
log-panics.workspace = true
log.workspace = true
napi = "3.0.0"
napi-derive = "3.0.0"
openssl.workspace = true
postgres-openssl.workspace = true
postgres.workspace = true
pyo3 = { workspace = true, optional = true }
pyo3-log = { workspace = true, optional = true }
rand.workspace = true
serial_test.workspace = true
tikv-jemallocator = { workspace = true, optional = true }

[dependencies.synapse_compress_state]
path = "../"
default-features = false
features = ["no-progress-bars"]

[build-dependencies]
napi-build = "2"

# Needed for pyo3 support
[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["clap", "jemalloc"]
jemalloc = ["tikv-jemallocator", "synapse_compress_state/jemalloc"]
pyo3 = ["dep:pyo3", "dep:pyo3-log", "synapse_compress_state/pyo3"]
