[project]
name = "synapse_auto_compressor"
requires-python = ">=3.7"
classifier = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Rust",
]

[project.urls]
Source = "https://github.com/matrix-org/rust-synapse-compress-state"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
profile = "release"
features = ["pyo3"]
no-default-features = true
